firebase: fix dropdown visibility

--- a/src/app/components/user-list/user-list.component.css
+++ b/src/app/components/user-list/user-list.component.css
@@ -7,6 +7,6 @@
   padding-right: 0!important;
 }
 
-.dropdown {
+.staticDropdown {
   position: static;
 }
